update pubs, group

--- a/group.html
+++ b/group.html
@@ -258,8 +258,8 @@ $(document).ready(function () {
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
-<li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016– ). Privacy in distributed sensing → Postdoc at the ANU</li>
-<li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015– ). Distributed graph processing → Founder, NeuroPhyte</li>
+<li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU</li>
+<li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder, NeuroPhyte</li>
 <li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015–18). Stream computing → Assistant Prof at NUDT</li>
 <li><a href="https://www.researchgate.net/profile/Zay_Aye">Zay Aye</a> - CompSci (w Rao Kotagiri 2014–18). Learning distance metrics → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.linkedin.com/in/yamuna-kankanige-8b258a26/">Yamuna Kankanige</a> (w James Bailey 2015–18). Predicting liver transplant outcomes with Austin Health → Bioinformatician at Peter MacCallum Cancer Centre</li>
