--- a/pubs.html
+++ b/pubs.html
@@ -237,6 +237,41 @@ $(document).ready(function () {
 <p><br></p>
 <p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints.</p>
 <div id="section" class="section level3">
+<h3>2019</h3>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-roohi2019">
+@inproceedings{roohi2019,
+  title = {Differentially-Private Two-Party Egocentric Betweenness Centrality},
+  author = {Leyla Roohi and Benjamin I. P. Rubinstein and Vanessa Teague},
+  year = {2019},
+  booktitle = {The 38th Annual IEEE International Conference on Computer Communications},
+  series = {INFOCOM},
+  note = {accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Roohi, Leyla, Benjamin I. P. Rubinstein and Vanessa Teague. “Differentially-Private Two-Party Egocentric Betweenness Centrality”. In: <em>The 38th Annual IEEE International Conference on Computer Communications</em>. INFOCOM. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('roohi2019.bib', 'bibtex-roohi2019')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-alfeld2019attacking">
+@inproceedings{alfeld2019attacking,
+  title = {Attacking Data Transforming Learners at Training Time},
+  author = {Scott Alfeld and Ara Vartanian and Lucas Newman-Johnson and Benjamin I.P Rubinstein},
+  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence},
+  series = {AAAI},
+  note = {accepted},
+  year = {2019},
+}
+</code></pre></div>
+
+<ul>
+<li>Alfeld, Scott, Ara Vartanian, Lucas Newman-Johnson and Benjamin I.P Rubinstein. “Attacking Data Transforming Learners at Training Time”. In: <em>Proceedings of the 33rd AAAI Conference on Artificial Intelligence</em>. AAAI. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('alfeld2019attacking.bib', 'bibtex-alfeld2019attacking')">BibTeX</a>]</li>
+</ul>
+</div>
+<div id="section-1" class="section level3">
 <h3>2018</h3>
 
 <div class="bibox" style="display: none;">
@@ -244,15 +279,34 @@ $(document).ready(function () {
 @inproceedings{fanaeepour2018histogramming,
   title = {Histogramming Privately Ever After: Differentially-Private Data-Dependent Error Bound Optimisation},
   author = {Maryam Fanaeepour and Benjamin I. P. Rubinstein},
-  booktitle = {Proceedings of the 34th International Conference on Data Engineering},
+  booktitle = {2018 IEEE 34th International Conference on Data Engineering},
   series = {ICDE},
   year = {2018},
+  month = {Apr},
+  pages = {1204--1207},
   organization = {IEEE},
 }
 </code></pre></div>
 
 <ul>
-<li>Fanaeepour, Maryam and Benjamin I. P. Rubinstein. “Histogramming Privately Ever After: Differentially-Private Data-Dependent Error Bound Optimisation”. In: <em>Proceedings of the 34th International Conference on Data Engineering</em>. ICDE. IEEE. 2018. [<a href="https://arxiv.org/abs/1702.05607">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fanaeepour2018histogramming.bib', 'bibtex-fanaeepour2018histogramming')">BibTeX</a>]</li>
+<li>Fanaeepour, Maryam and Benjamin I. P. Rubinstein. “Histogramming Privately Ever After: Differentially-Private Data-Dependent Error Bound Optimisation”. In: <em>2018 IEEE 34th International Conference on Data Engineering</em>. ICDE. IEEE. Apr. 2018, pp. 1204-1207. [<a href="http://doi.ieeecomputersociety.org/10.1109/ICDE.2018.00111">PDF</a>; <a href="https://arxiv.org/abs/1702.05607">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fanaeepour2018histogramming.bib', 'bibtex-fanaeepour2018histogramming')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-han2018reinforcement">
+@inproceedings{han2018reinforcement,
+  title = {Reinforcement Learning for Autonomous Defence in Software-Defined Networking},
+  author = {Yi Han and Benjamin I. P. Rubinstein and Tamas Abraham and Tansu Alpcan and Olivier {De Vel} and Sarah Erfani and David Hubczenko and Christopher Leckie and Paul Montague},
+  booktitle = {9th International Conference on Decision and Game Theory for Security},
+  series = {GameSec},
+  pages = {145--165},
+  year = {2018},
+  organization = {Springer},
+}
+</code></pre></div>
+
+<ul>
+<li>Han, Yi, Benjamin I. P. Rubinstein, Tamas Abraham, Tansu Alpcan, Olivier De Vel, Sarah Erfani, David Hubczenko, Christopher Leckie and Paul Montague. “Reinforcement Learning for Autonomous Defence in Software-Defined Networking”. In: <em>9th International Conference on Decision and Game Theory for Security</em>. GameSec. Springer. 2018, pp. 145-165. [<a href="https://link.springer.com/book/10.1007/978-3-030-01554-1">PDF</a>; <a href="https://arxiv.org/abs/1808.05770">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2018reinforcement.bib', 'bibtex-han2018reinforcement')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -280,14 +334,16 @@ $(document).ready(function () {
   author = {Lingjuan Lyu and Karthik Nandakumar and Benjamin I. P. Rubinstein and Jiong Jin and Justin Bedo and Marimuthu Palaniswami},
   title = {{PPFA}: Privacy-Preserving Fog-enabled Aggregation in Smart Grid},
   journal = {IEEE Transactions on Industrial Informatics},
-  note = {in press},
-  month = {Feb},
+  month = {Aug},
   year = {2018},
+  volume = {14},
+  number = {8},
+  pages = {3733-3744},
 }
 </code></pre></div>
 
 <ul>
-<li>Lyu, Lingjuan, Karthik Nandakumar, Benjamin I. P. Rubinstein, Jiong Jin, Justin Bedo and Marimuthu Palaniswami. “PPFA: Privacy-Preserving Fog-enabled Aggregation in Smart Grid”. In: <em>IEEE Transactions on Industrial Informatics</em> (Feb. 2018). in press. [<a style="cursor: pointer;" onclick="DownloadToFile('lyu2018ppfa.bib', 'bibtex-lyu2018ppfa')">BibTeX</a>]</li>
+<li>Lyu, Lingjuan, Karthik Nandakumar, Benjamin I. P. Rubinstein, Jiong Jin, Justin Bedo and Marimuthu Palaniswami. “PPFA: Privacy-Preserving Fog-enabled Aggregation in Smart Grid”. In: <em>IEEE Transactions on Industrial Informatics</em> 14.8 (Aug. 2018), pp. 3733-3744. [<a href="https://ieeexplore.ieee.org/document/8286939/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('lyu2018ppfa.bib', 'bibtex-lyu2018ppfa')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -331,12 +387,12 @@ $(document).ready(function () {
   series = {PAKDD},
   month = {Feb},
   year = {2018},
-  note = {accepted},
+  pages = {452--464},
 }
 </code></pre></div>
 
 <ul>
-<li>Aye, Zay Maung Maung, Kotagiri Ramamohanaro and Benjamin I. P. Rubinstein. “Fast Manifold Landmarking with Locality Sensitive Hashing”. In: <em>22nd Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>. PAKDD. accepted. Feb. 2018. [<a style="cursor: pointer;" onclick="DownloadToFile('aye2018fast.bib', 'bibtex-aye2018fast')">BibTeX</a>]</li>
+<li>Aye, Zay Maung Maung, Kotagiri Ramamohanaro and Benjamin I. P. Rubinstein. “Fast Manifold Landmarking with Locality Sensitive Hashing”. In: <em>22nd Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>. PAKDD. Feb. 2018, pp. 452-464. [<a href="https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('aye2018fast.bib', 'bibtex-aye2018fast')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -355,7 +411,7 @@ $(document).ready(function () {
 <li>Han, Yi and Benjamin I. P. Rubinstein. “Adequacy of the Gradient-Descent Method for Classifier Evasion Attacks”. In: <em>AAAI-18 Workshop on Artificial Intelligence for Cyber Security</em>. AICS. Jan. 2018. [<a href="https://arxiv.org/abs/1704.01704">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2018adequacy.bib', 'bibtex-han2018adequacy')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-2" class="section level3">
 <h3>2017</h3>
 
 <div class="bibox" style="display: none;">
@@ -562,7 +618,7 @@ $(document).ready(function () {
 <li>Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper and Benjamin I. P. Rubinstein. “Exploring misconceptions as a trigger for enhancing student learning”. In: <em>Higher Education Research and Development Society of Australasia</em>. HERDSA. Apr. 2017. [<a style="cursor: pointer;" onclick="DownloadToFile('verkade2017exploring.bib', 'bibtex-verkade2017exploring')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2016</h3>
 
 <div class="bibox" style="display: none;">
@@ -724,7 +780,7 @@ $(document).ready(function () {
 <li>He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang and Sandra Milligan. <em>TopicResponse: A Marriage of Topic Modelling and Rasch Modelling for Automatic Measurement in MOOCs</em>. 2016. arXiv: 1607.08720 [cs.LG]. [<a href="https://arxiv.org/abs/1607.08720">PDF</a>; <a href="https://bitbucket.org/jiazhenhe/topicresponse">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2016topicresponse.bib', 'bibtex-he2016topicresponse')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2015</h3>
 
 <div class="bibox" style="display: none;">
@@ -815,7 +871,7 @@ $(document).ready(function () {
 <li>Fanaeepour, Maryam, Lars Kulik, Egemen Tanin and Benjamin I. P. Rubinstein. “The CASE histogram: Privacy-aware processing of trajectory data using aggregates”. In: <em>GeoInformatica</em> 19.4 (Jul. 2015), pp. 747-798. [<a href="http://link.springer.com/article/10.1007/s10707-015-0228-8">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fanaeepour2015the.bib', 'bibtex-fanaeepour2015the')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2014</h3>
 
 <div class="bibox" style="display: none;">
@@ -871,7 +927,7 @@ $(document).ready(function () {
 <li>Dimitrakakis, Christos, Aikaterini Mitrokotsa and Benjamin I. P. Rubinstein. “Proceedings of the 7th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2014 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, 2014, pp. 1-124. [<a href="http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('dimitrakakis2014proceedings.bib', 'bibtex-dimitrakakis2014proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2012</h3>
 
 <div class="bibox" style="display: none;">
@@ -1022,7 +1078,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Blaine Nelson and Benjamin I. P. Rubinstein. “Fifth ACM Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2012 ACM Conference on Computer and Communications Security</em>. CCS. ACM. Oct. 2012, pp. 1-110. [<a href="http://dx.doi.org/10.1145/2382196.2382327">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2012fifth.bib', 'bibtex-cardenas2012fifth')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2011</h3>
 
 <div class="bibox" style="display: none;">
@@ -1112,7 +1168,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Rachel Greenstadt and Benjamin I. P. Rubinstein. “Proceedings of the 4th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2011 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, Oct. 2011, pp. 1-116. [<a href="https://www.microsoft.com/en-us/research/publication/proceedings-of-the-4th-acm-workshop-on-security-and-artificial-intelligence/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2011proceedings.bib', 'bibtex-cardenas2011proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2010</h3>
 
 <div class="bibox" style="display: none;">
@@ -1179,7 +1235,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Secure Learning and Learning for Security: Research in the Intersection”. PhD dissertation. Department of Electrical Engineering &amp; Computer Sciences, University of California, Berkeley, May. 2010. [<a href="http://www.eecs.berkeley.edu/Pubs/TechRpts/2010/EECS-2010-71.html">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2010secure.bib', 'bibtex-rubinstein2010secure')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2009</h3>
 
 <div class="bibox" style="display: none;">
@@ -1282,7 +1338,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Shifting in the n-Cube: Online Mistake Bounds and the Sample Compression Conjecture”. MCompSci thesis. Faculty of Engineering, University of Melbourne, 2009. [<a href="http://repository.unimelb.edu.au/10187/5774">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009bshifting.bib', 'bibtex-rubinstein2009bshifting')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2008</h3>
 
 <div class="bibox" style="display: none;">
@@ -1366,7 +1422,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft and Doug Tygar. <em>Compromising PCA-based anomaly detectors for network-wide traffic</em>. technical report UCB/EECS-2008-73. EECS Department, University of California, Berkeley, 2008. [<a href="http://www.eecs.berkeley.edu/Pubs/TechRpts/2008/EECS-2008-73.html">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008compromising.bib', 'bibtex-rubinstein2008compromising')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2007</h3>
 
 <div class="bibox" style="display: none;">
