add new student

--- a/group.html
+++ b/group.html
@@ -246,6 +246,7 @@ $(document).ready(function () {
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
+<li>Ruihan Zhang (w Tim Miller 2019– ). Explainable AI and machine learning.</li>
 <li><a href="https://ndthan.bitbucket.io/">Duc Than Nguyen</a> (w Toby Murray 2018– ). Probabilistic information flow security.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
