--- a/pubs.html
+++ b/pubs.html
@@ -270,6 +270,21 @@ $(document).ready(function () {
 <ul>
 <li>Alfeld, Scott, Ara Vartanian, Lucas Newman-Johnson and Benjamin I.P Rubinstein. “Attacking Data Transforming Learners at Training Time”. In: <em>Proceedings of the 33rd AAAI Conference on Artificial Intelligence</em>. AAAI. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('alfeld2019attacking.bib', 'bibtex-alfeld2019attacking')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-joseph2019adversarial">
+@book{joseph2019adversarial,
+  title = {Adversarial Machine Learning},
+  year = {2019},
+  author = {Anthony D. Joseph and Blaine Nelson and Benjamin I. P. Rubinstein and J. D. Tygar},
+  publisher = {Cambridge University Press},
+  note = {in press for Feb 2019 publication},
+}
+</code></pre></div>
+
+<ul>
+<li>Joseph, Anthony D., Blaine Nelson, Benjamin I. P. Rubinstein and J. D. Tygar. <em>Adversarial Machine Learning</em>. in press for Feb 2019 publication. Cambridge University Press, 2019. [<a href="https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joseph2019adversarial.bib', 'bibtex-joseph2019adversarial')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2018</h3>
@@ -344,21 +359,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Lyu, Lingjuan, Karthik Nandakumar, Benjamin I. P. Rubinstein, Jiong Jin, Justin Bedo and Marimuthu Palaniswami. “PPFA: Privacy-Preserving Fog-enabled Aggregation in Smart Grid”. In: <em>IEEE Transactions on Industrial Informatics</em> 14.8 (Aug. 2018), pp. 3733-3744. [<a href="https://ieeexplore.ieee.org/document/8286939/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('lyu2018ppfa.bib', 'bibtex-lyu2018ppfa')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-joseph2018adversarial">
-@book{joseph2018adversarial,
-  title = {Adversarial Machine Learning},
-  year = {2018},
-  author = {Anthony D. Joseph and Blaine Nelson and Benjamin I. P. Rubinstein and J. D. Tygar},
-  publisher = {Cambridge University Press},
-  note = {in press},
-}
-</code></pre></div>
-
-<ul>
-<li>Joseph, Anthony D., Blaine Nelson, Benjamin I. P. Rubinstein and J. D. Tygar. <em>Adversarial Machine Learning</em>. in press. Cambridge University Press, 2018. [<a href="https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joseph2018adversarial.bib', 'bibtex-joseph2018adversarial')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
