--- a/pubs.html
+++ b/pubs.html
@@ -252,7 +252,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Roohi, Leyla, Benjamin I. P. Rubinstein and Vanessa Teague. “Differentially-Private Two-Party Egocentric Betweenness Centrality”. In: <em>The 38th Annual IEEE International Conference on Computer Communications</em>. INFOCOM. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('roohi2019.bib', 'bibtex-roohi2019')">BibTeX</a>]</li>
+<li>Roohi, Leyla, Benjamin I. P. Rubinstein and Vanessa Teague. “Differentially-Private Two-Party Egocentric Betweenness Centrality”. In: <em>The 38th Annual IEEE International Conference on Computer Communications</em>. INFOCOM. accepted. 2019. [<a href="https://arxiv.org/abs/1901.05562">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('roohi2019.bib', 'bibtex-roohi2019')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -460,11 +460,12 @@ $(document).ready(function () {
   series = {AAAI},
   year = {2017},
   month = {Feb},
+  pages = {1705--1711},
 }
 </code></pre></div>
 
 <ul>
-<li>Alda, Francesco and Benjamin I. P. Rubinstein. “The Bernstein mechanism: Function release under differential privacy”. In: <em>Proceedings of the 31st AAAI Conference on Artificial Intelligence</em>. AAAI. Feb. 2017. [<a href="http://www.aaai.org/Conferences/AAAI/2017/PreliminaryPapers/12-Alda-14735.pdf">PDF</a>; <a href="https://arxiv.org/abs/1507.04499">full</a>; <a href="https://brubinstein.github.io/diffpriv">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alda2017the.bib', 'bibtex-alda2017the')">BibTeX</a>]</li>
+<li>Alda, Francesco and Benjamin I. P. Rubinstein. “The Bernstein mechanism: Function release under differential privacy”. In: <em>Proceedings of the 31st AAAI Conference on Artificial Intelligence</em>. AAAI. Feb. 2017, pp. 1705-1711. [<a href="http://www.aaai.org/Conferences/AAAI/2017/PreliminaryPapers/12-Alda-14735.pdf">PDF</a>; <a href="https://arxiv.org/abs/1507.04499">full</a>; <a href="https://brubinstein.github.io/diffpriv">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alda2017the.bib', 'bibtex-alda2017the')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
