--- a/pubs.html
+++ b/pubs.html
@@ -240,8 +240,24 @@ $(document).ready(function () {
 <h3>2019</h3>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-roohi2019">
-@inproceedings{roohi2019,
+<pre><code id="bibtex-li2019truth">
+@inproceedings{li2019truth,
+  title = {Truth inference at scale: {A} {B}ayesian model for adjudicating highly redundant crowd annotations},
+  author = {Yuan Li and Benjamin I. P. Rubinstein and Trevor Cohn},
+  year = {2019},
+  booktitle = {Proceedings of the 2019 World Wide Web Conferece},
+  series = {WWW},
+  note = {accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Truth inference at scale: A Bayesian model for adjudicating highly redundant crowd annotations”. In: <em>Proceedings of the 2019 World Wide Web Conferece</em>. WWW. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('li2019truth.bib', 'bibtex-li2019truth')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-roohi2019differentiallyprivate">
+@inproceedings{roohi2019differentiallyprivate,
   title = {Differentially-Private Two-Party Egocentric Betweenness Centrality},
   author = {Leyla Roohi and Benjamin I. P. Rubinstein and Vanessa Teague},
   year = {2019},
@@ -252,7 +268,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Roohi, Leyla, Benjamin I. P. Rubinstein and Vanessa Teague. “Differentially-Private Two-Party Egocentric Betweenness Centrality”. In: <em>The 38th Annual IEEE International Conference on Computer Communications</em>. INFOCOM. accepted. 2019. [<a href="https://arxiv.org/abs/1901.05562">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('roohi2019.bib', 'bibtex-roohi2019')">BibTeX</a>]</li>
+<li>Roohi, Leyla, Benjamin I. P. Rubinstein and Vanessa Teague. “Differentially-Private Two-Party Egocentric Betweenness Centrality”. In: <em>The 38th Annual IEEE International Conference on Computer Communications</em>. INFOCOM. accepted. 2019. [<a href="https://arxiv.org/abs/1901.05562">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('roohi2019differentiallyprivate.bib', 'bibtex-roohi2019differentiallyprivate')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -278,12 +294,12 @@ $(document).ready(function () {
   year = {2019},
   author = {Anthony D. Joseph and Blaine Nelson and Benjamin I. P. Rubinstein and J. D. Tygar},
   publisher = {Cambridge University Press},
-  note = {in press for Feb 2019 publication},
+  note = {in press for April 2019 publication},
 }
 </code></pre></div>
 
 <ul>
-<li>Joseph, Anthony D., Blaine Nelson, Benjamin I. P. Rubinstein and J. D. Tygar. <em>Adversarial Machine Learning</em>. in press for Feb 2019 publication. Cambridge University Press, 2019. [<a href="https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joseph2019adversarial.bib', 'bibtex-joseph2019adversarial')">BibTeX</a>]</li>
+<li>Joseph, Anthony D., Blaine Nelson, Benjamin I. P. Rubinstein and J. D. Tygar. <em>Adversarial Machine Learning</em>. in press for April 2019 publication. Cambridge University Press, 2019. [<a href="https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joseph2019adversarial.bib', 'bibtex-joseph2019adversarial')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
