Updating adaptdatanaly arXiv

--- a/pubs.html
+++ b/pubs.html
@@ -301,6 +301,23 @@ $(document).ready(function () {
 <ul>
 <li>Joseph, Anthony D., Blaine Nelson, Benjamin I. P. Rubinstein and J. D. Tygar. <em>Adversarial Machine Learning</em>. in press for April 2019 publication. Cambridge University Press, 2019. [<a href="https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joseph2019adversarial.bib', 'bibtex-joseph2019adversarial')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-fish2019sampling">
+@misc{fish2019sampling,
+  title = {Sampling Without Compromising Accuracy in Adaptive Data Analysis},
+  author = {Benjamin Fish and Lev Reyzin and Benjamin I. P. Rubinstein},
+  eprint = {1709.09778},
+  year = {2019},
+  month = {Jan},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.LG},
+}
+</code></pre></div>
+
+<ul>
+<li>Fish, Benjamin, Lev Reyzin and Benjamin I. P. Rubinstein. <em>Sampling Without Compromising Accuracy in Adaptive Data Analysis</em>. Jan. 2019. arXiv: 1709.09778 [cs.LG]. [<a href="https://arxiv.org/pdf/1709.09778">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fish2019sampling.bib', 'bibtex-fish2019sampling')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2018</h3>
@@ -533,23 +550,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Verkade, Heather, Terrence D. Mulhern, Jason M. Lodge, Kristine Elliott, Simon Cropper, Benjamin I. P. Rubinstein, Allen Espinosa, Michelle Livett, Laura Dooley, Sarah Frankland and Raoul Mulder. <em>Misconceptions as a trigger for enhancing student learning in higher education: A handbook for educators</em>. Published by The University of Melbourne, 2017. ISBN: 978 0 7340 5410 4. [<a href="http://hdl.handle.net/11343/197958">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('verkade2017misconceptions.bib', 'bibtex-verkade2017misconceptions')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-fish2017sublineartime">
-@misc{fish2017sublineartime,
-  title = {Sublinear-Time Adaptive Data Analysis},
-  author = {Benjamin Fish and Lev Reyzin and Benjamin I. P. Rubinstein},
-  eprint = {1709.09778},
-  year = {2017},
-  month = {Sep},
-  archiveprefix = {arXiv},
-  primaryclass = {cs.LG},
-}
-</code></pre></div>
-
-<ul>
-<li>Fish, Benjamin, Lev Reyzin and Benjamin I. P. Rubinstein. <em>Sublinear-Time Adaptive Data Analysis</em>. Sep. 2017. arXiv: 1709.09778 [cs.LG]. [<a href="https://arxiv.org/pdf/1709.09778">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fish2017sublineartime.bib', 'bibtex-fish2017sublineartime')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
