--- a/group.html
+++ b/group.html
@@ -240,7 +240,6 @@ $(document).ready(function () {
 <ul>
 <li><a href="http://shuo-zhou.info/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
 <li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (2018– ). Adversarial machine learning.</li>
-<li><a href="https://scholar.google.com/citations?user=e_mtK4kAAAAJ&amp;hl=en">Yi Han</a> (2016– ). Adversarial reinforcement learning, software-defined networks.</li>
 </ul>
 </div>
 <div id="phd-students" class="section level3">
@@ -272,6 +271,7 @@ $(document).ready(function () {
 <div id="other-alumni" class="section level3">
 <h3>Other Alumni</h3>
 <ul>
+<li><a href="https://scholar.google.com/citations?user=e_mtK4kAAAAJ&amp;hl=en">Yi Han</a> (postdoc 2016–19). Adversarial reinforcement learning → Postdoc at Melbourne</li>
 <li><a href="https://scholar.google.com/citations?user=TpErHPkAAAAJ&amp;hl=en">Shen Wang</a> (postdoc 2016–18). Probabilistic programming, databases, record linkage.</li>
 <li><a href="http://ben.fish/">Ben Fish</a> (medium-term PhD visitor 2016) → Postdoc at MSR Montréal</li>
 <li><a href="http://www.ruhr-uni-bochum.de/lmi/alda/">Francesco Aldà</a> (medium-term PhD visitor 2016) → Data Scientist at SAP, Germany <!-- ### PhD interns---former Microsoft Research --></li>
