--- a/group.html
+++ b/group.html
@@ -252,12 +252,12 @@ $(document).ready(function () {
 <li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Gideon Ernst 2018– ). Software fuzzing with machine learning.</li>
 <li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017– ). Secure storage and private querying for telecommunications metadata.</li>
 <li><a href="https://www.linkedin.com/in/neil-marchant-466678aa/">Neil Marchant</a> (w Aurore Delaigle 2016– ). Record linkage, adaptive importance sampling.</li>
-<li>Yuan Li (w Trevor Cohn 2015– ). Crowd sourcing, Bayesian optimisation, NLP.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li>Yuan Li (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP (completed; under examination)</li>
 <li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU</li>
 <li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder, NeuroPhyte</li>
 <li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015–18). Stream computing → Assistant Prof at NUDT</li>
