--- a/pubs.html
+++ b/pubs.html
@@ -303,6 +303,23 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-oetomo2019a">
+@misc{oetomo2019a,
+  title = {A Note on Bounding Regret of the C$^2$UCB Contextual Combinatorial Bandit},
+  author = {Bastian Oetomo and Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  eprint = {1902.07500},
+  year = {2019},
+  month = {Feb},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.LG},
+}
+</code></pre></div>
+
+<ul>
+<li>Oetomo, Bastian, Malinga Perera, Renata Borovica-Gajic and Benjamin I. P. Rubinstein. <em>A Note on Bounding Regret of the C<span class="math inline">\(^2\)</span>UCB Contextual Combinatorial Bandit</em>. Feb. 2019. arXiv: 1902.07500 [cs.LG]. [<a href="https://arxiv.org/pdf/1902.07500">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('oetomo2019a.bib', 'bibtex-oetomo2019a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-fish2019sampling">
 @misc{fish2019sampling,
   title = {Sampling Without Compromising Accuracy in Adaptive Data Analysis},
