--- a/pubs.html
+++ b/pubs.html
@@ -252,7 +252,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Truth inference at scale: A Bayesian model for adjudicating highly redundant crowd annotations”. In: <em>Proceedings of the 2019 World Wide Web Conferece</em>. WWW. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('li2019truth.bib', 'bibtex-li2019truth')">BibTeX</a>]</li>
+<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Truth inference at scale: A Bayesian model for adjudicating highly redundant crowd annotations”. In: <em>Proceedings of the 2019 World Wide Web Conferece</em>. WWW. accepted. 2019. [<a href="http://arxiv.org/abs/1902.08918">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019truth.bib', 'bibtex-li2019truth')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
