add icml19, ppml, simons video

--- a/pubs.html
+++ b/pubs.html
@@ -240,6 +240,22 @@ $(document).ready(function () {
 <h3>2019</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-li2019exploiting">
+@inproceedings{li2019exploiting,
+  title = {Exploiting Worker Correlation for Label Aggregation in Crowdsourcing},
+  author = {Yuan Li and Benjamin I. P. Rubinstein and Trevor Cohn},
+  year = {2019},
+  booktitle = {Proceedings of the 36th International Conference on Machine Learning},
+  series = {ICML},
+  note = {accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-li2019truth">
 @inproceedings{li2019truth,
   title = {Truth inference at scale: {A} {B}ayesian model for adjudicating highly redundant crowd annotations},
