--- a/impact.html
+++ b/impact.html
@@ -431,6 +431,7 @@ div.tocify {
 <div id="speaking-engagements" class="section level3">
 <h3>Speaking engagements</h3>
 <ul>
+<li>06/2019: Invited speaker at the <a href="http://sites.nationalacademies.org/DBASSE/CNSTAT/challenges-and-new-approaches-for-protecting-privacy-in-federal-statistical-programs/index.htm">Challenges and New Approaches for Protecting Privacy in Federal Statistical Programs</a> Workshop organised by the Committee on National Statistics (CNTSTAT) at the U.S. National Acadmies of Sciences, Engineering, and Medicine, Washington D.C.</li>
 <li>04/2019: Invited speaker at the <a href="https://simons.berkeley.edu/privacy2019-2">Privacy and the Science of Data Analysis</a> workshop at the <a href="https://simons.berkeley.edu/">Simons Institute for the Theory of Computing</a>, Berkeley. <a href="https://www.youtube.com/watch?v=zgA9rzp1uRs">Talk video</a>.</li>
 <li>08/2018: Keynote at the <a href="http://giscience.org/">GIScience’18</a> <a href="https://ptal-io.github.io/lopas2018/">Location Privacy and Security Workshop (LoPaS)</a></li>
 <li>06/2018: Panelist, Panel on Data Privacy, <a href="https://www.sbs.ox.ac.uk/programmes/execed/dmap">Oxford-Melbourne Digital Marketing and Analytics Executive Program</a>.</li>
