funding/typo fixes

--- a/impact.html
+++ b/impact.html
@@ -382,10 +382,10 @@ div.tocify {
 <h2>Funding &amp; Awards</h2>
 <div id="funding" class="section level3">
 <h3>Funding</h3>
-<p>Since arriving at the University of Melbourne Oct 2013, I have been awarded competitive funding (Cat 1–4) of <strong>$4.23m total</strong>, <strong>$1.72m as lead-CI</strong>, $1.69m on a per-CI basis. Funding includes:</p>
+<p>Since arriving at the University of Melbourne Oct 2013, I have been awarded competitive funding (Cat 1–4) of <strong>$4.07m total</strong>, <strong>$1.72m as lead-CI</strong>, $1.67m on a per-CI basis. Funding includes:</p>
 <ul>
 <li>2019–2022 <strong>$948k: Consunet and Defence Science &amp; Technology Group</strong> Defence CRC, <em>Distributed Autonomous Spectrum Management (DUST)</em>, Tansu Alpcan, Benjamin Rubinstein.</li>
-<li>2019 <strong>$187k: Defence Science &amp; Technology Group and Data61/CSIRO</strong> Next Gen Tech Fund CRP, <em>Towards Robust Learning Systems via Amortized Optimization and Domain Adaptation</em>, Dinh Phung et al.</li>
+<li>2019 <strong>$31k: Defence Science &amp; Technology Group and Data61/CSIRO</strong> Next Gen Tech Fund CRP, <em>Towards Robust Learning Systems via Amortized Optimization and Domain Adaptation</em>, Dinh Phung et al.</li>
 <li>2018–2019 <strong>$50k: Australia Bureau of Statistics</strong> Research Contract, <em>Disclosure Risk Analysis</em>, Chris Culnane, Benjamin Rubinstein.</li>
 <li>2018–2019 <strong>$153k: U.S. Army Research Office</strong> Research Grant, <em>Towards designing complex networks resilient to stealthy attack and cascading failure</em>, Antoinette Tordesillas, Benjamin Rubinstein, James Bailey, Howard Bondell.</li>
 <li>2018–2019 <strong>$24k: Mondo Power</strong> AMSI internship program, <em>Anomaly detection in time series energy consumption data</em>, Benjamin Rubinstein, Leyla Roohi.</li>
@@ -431,7 +431,7 @@ div.tocify {
 <div id="speaking-engagements" class="section level3">
 <h3>Speaking engagements</h3>
 <ul>
-<li>06/2019: Invited speaker at the <a href="http://sites.nationalacademies.org/DBASSE/CNSTAT/challenges-and-new-approaches-for-protecting-privacy-in-federal-statistical-programs/index.htm">Challenges and New Approaches for Protecting Privacy in Federal Statistical Programs</a> Workshop organised by the Committee on National Statistics (CNTSTAT) at the U.S. National Acadmies of Sciences, Engineering, and Medicine, Washington D.C.</li>
+<li>06/2019: Invited speaker at the <a href="http://sites.nationalacademies.org/DBASSE/CNSTAT/challenges-and-new-approaches-for-protecting-privacy-in-federal-statistical-programs/index.htm">Challenges and New Approaches for Protecting Privacy in Federal Statistical Programs</a> Workshop organised by the Committee on National Statistics (CNSTAT) at the U.S. National Acadmies of Sciences, Engineering, and Medicine, Washington D.C.</li>
 <li>04/2019: Invited speaker at the <a href="https://simons.berkeley.edu/privacy2019-2">Privacy and the Science of Data Analysis</a> workshop at the <a href="https://simons.berkeley.edu/">Simons Institute for the Theory of Computing</a>, Berkeley. <a href="https://www.youtube.com/watch?v=zgA9rzp1uRs">Talk video</a>.</li>
 <li>08/2018: Keynote at the <a href="http://giscience.org/">GIScience’18</a> <a href="https://ptal-io.github.io/lopas2018/">Location Privacy and Security Workshop (LoPaS)</a></li>
 <li>06/2018: Panelist, Panel on Data Privacy, <a href="https://www.sbs.ox.ac.uk/programmes/execed/dmap">Oxford-Melbourne Digital Marketing and Analytics Executive Program</a>.</li>
