link to paper, fix OVIC link, workshop PCs

--- a/pubs.html
+++ b/pubs.html
@@ -252,7 +252,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
+<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. accepted. 2019. [<a href="http://proceedings.mlr.press/v97/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -300,7 +300,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Alfeld, Scott, Ara Vartanian, Lucas Newman-Johnson and Benjamin I.P Rubinstein. “Attacking Data Transforming Learners at Training Time”. In: <em>Proceedings of the 33rd AAAI Conference on Artificial Intelligence</em>. AAAI. accepted. 2019. [<a href="https://www.aaai.org/Papers/AAAI/2019/AAAI-AlfeldS.6136.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alfeld2019attacking.bib', 'bibtex-alfeld2019attacking')">BibTeX</a>]</li>
+<li>Alfeld, Scott, Ara Vartanian, Lucas Newman-Johnson and Benjamin I.P Rubinstein. “Attacking Data Transforming Learners at Training Time”. In: <em>Proceedings of the 33rd AAAI Conference on Artificial Intelligence</em>. AAAI. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('alfeld2019attacking.bib', 'bibtex-alfeld2019attacking')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
