--- a/group.html
+++ b/group.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
-<li><a href="http://shuo-zhou.info/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
+<li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
 <li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (2018– ). Adversarial machine learning.</li>
 </ul>
 </div>
