--- a/group.html
+++ b/group.html
@@ -238,6 +238,7 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
+<li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (w Alpcan 2019– ). Spectrum management in contested environment with ML.</li>
 <li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
 <li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (2018– ). Adversarial machine learning.</li>
 </ul>
@@ -249,9 +250,9 @@ $(document).ready(function () {
 <li><a href="https://ndthan.bitbucket.io/">Duc Than Nguyen</a> (w Toby Murray 2018– ). Probabilistic information flow security.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
-<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Gideon Ernst 2018– ). Software fuzzing with machine learning.</li>
+<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Gidon Ernst at LMU Munich 2018– ). Software fuzzing with machine learning.</li>
 <li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017– ). Secure storage and private querying for telecommunications metadata.</li>
-<li><a href="https://www.linkedin.com/in/neil-marchant-466678aa/">Neil Marchant</a> (w Aurore Delaigle 2016– ). Record linkage, adaptive importance sampling.</li>
+<li><a href="https://www.linkedin.com/in/neil-marchant-466678aa/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016– ). Record linkage, adaptive importance sampling.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
