--- a/group.html
+++ b/group.html
@@ -238,9 +238,8 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
-<li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (w Alpcan 2019– ). Spectrum management in contested environment with ML.</li>
+<li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (w Alpcan 2019– ). Machine learning for spectrum management in contested environments.</li>
 <li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
-<li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (2018– ). Adversarial machine learning.</li>
 </ul>
 </div>
 <div id="phd-students" class="section level3">
@@ -272,6 +271,7 @@ $(document).ready(function () {
 <div id="other-alumni" class="section level3">
 <h3>Other Alumni</h3>
 <ul>
+<li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (postdoc 2018–19). Adversarial machine learning → Associate, Alan Turing Institute</li>
 <li><a href="https://scholar.google.com/citations?user=e_mtK4kAAAAJ&amp;hl=en">Yi Han</a> (postdoc 2016–19). Adversarial reinforcement learning → Postdoc at Melbourne</li>
 <li><a href="https://scholar.google.com/citations?user=TpErHPkAAAAJ&amp;hl=en">Shen Wang</a> (postdoc 2016–18). Probabilistic programming, databases, record linkage.</li>
 <li><a href="http://ben.fish/">Ben Fish</a> (medium-term PhD visitor 2016) → Postdoc at MSR Montréal</li>
