--- a/pubs.html
+++ b/pubs.html
@@ -300,7 +300,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Alfeld, Scott, Ara Vartanian, Lucas Newman-Johnson and Benjamin I.P Rubinstein. “Attacking Data Transforming Learners at Training Time”. In: <em>Proceedings of the 33rd AAAI Conference on Artificial Intelligence</em>. AAAI. accepted. 2019. [<a style="cursor: pointer;" onclick="DownloadToFile('alfeld2019attacking.bib', 'bibtex-alfeld2019attacking')">BibTeX</a>]</li>
+<li>Alfeld, Scott, Ara Vartanian, Lucas Newman-Johnson and Benjamin I.P Rubinstein. “Attacking Data Transforming Learners at Training Time”. In: <em>Proceedings of the 33rd AAAI Conference on Artificial Intelligence</em>. AAAI. accepted. 2019. [<a href="https://aaai.org/ojs/index.php/AAAI/article/view/4183">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alfeld2019attacking.bib', 'bibtex-alfeld2019attacking')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
