--- a/pubs.html
+++ b/pubs.html
@@ -247,12 +247,13 @@ $(document).ready(function () {
   year = {2019},
   booktitle = {Proceedings of the 36th International Conference on Machine Learning},
   series = {ICML},
-  note = {accepted},
+  pages = {3886--3895},
+  publisher = {PMLR},
 }
 </code></pre></div>
 
 <ul>
-<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. accepted. 2019. [<a href="http://proceedings.mlr.press/v97/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
+<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. PMLR, 2019, pp. 3886-3895. [<a href="http://proceedings.mlr.press/v97/li19i.html">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -263,12 +264,12 @@ $(document).ready(function () {
   year = {2019},
   booktitle = {Proceedings of the 2019 World Wide Web Conferece},
   series = {WWW},
-  note = {accepted},
+  pages = {1028--1038},
 }
 </code></pre></div>
 
 <ul>
-<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Truth inference at scale: A Bayesian model for adjudicating highly redundant crowd annotations”. In: <em>Proceedings of the 2019 World Wide Web Conferece</em>. WWW. accepted. 2019. [<a href="http://arxiv.org/abs/1902.08918">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019truth.bib', 'bibtex-li2019truth')">BibTeX</a>]</li>
+<li>Li, Yuan, Benjamin I. P. Rubinstein and Trevor Cohn. “Truth inference at scale: A Bayesian model for adjudicating highly redundant crowd annotations”. In: <em>Proceedings of the 2019 World Wide Web Conferece</em>. WWW. 2019, pp. 1028-1038. [<a href="http://arxiv.org/abs/1902.08918">full</a>; <a href="https://doi.org/10.1145/3308558.3313459">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019truth.bib', 'bibtex-li2019truth')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -279,12 +280,12 @@ $(document).ready(function () {
   year = {2019},
   booktitle = {The 38th Annual IEEE International Conference on Computer Communications},
   series = {INFOCOM},
-  note = {accepted},
+  pages = {2233--2241},
 }
 </code></pre></div>
 
 <ul>
-<li>Roohi, Leyla, Benjamin I. P. Rubinstein and Vanessa Teague. “Differentially-Private Two-Party Egocentric Betweenness Centrality”. In: <em>The 38th Annual IEEE International Conference on Computer Communications</em>. INFOCOM. accepted. 2019. [<a href="https://arxiv.org/abs/1901.05562">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('roohi2019differentiallyprivate.bib', 'bibtex-roohi2019differentiallyprivate')">BibTeX</a>]</li>
+<li>Roohi, Leyla, Benjamin I. P. Rubinstein and Vanessa Teague. “Differentially-Private Two-Party Egocentric Betweenness Centrality”. In: <em>The 38th Annual IEEE International Conference on Computer Communications</em>. INFOCOM. 2019, pp. 2233-2241. [<a href="https://arxiv.org/abs/1901.05562">full</a>; <a href="https://doi.org/10.1109/INFOCOM.2019.8737405">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('roohi2019differentiallyprivate.bib', 'bibtex-roohi2019differentiallyprivate')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -294,13 +295,13 @@ $(document).ready(function () {
   author = {Scott Alfeld and Ara Vartanian and Lucas Newman-Johnson and Benjamin I.P Rubinstein},
   booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence},
   series = {AAAI},
-  note = {accepted},
+  pages = {3167--3174},
   year = {2019},
 }
 </code></pre></div>
 
 <ul>
-<li>Alfeld, Scott, Ara Vartanian, Lucas Newman-Johnson and Benjamin I.P Rubinstein. “Attacking Data Transforming Learners at Training Time”. In: <em>Proceedings of the 33rd AAAI Conference on Artificial Intelligence</em>. AAAI. accepted. 2019. [<a href="https://aaai.org/ojs/index.php/AAAI/article/view/4183">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alfeld2019attacking.bib', 'bibtex-alfeld2019attacking')">BibTeX</a>]</li>
+<li>Alfeld, Scott, Ara Vartanian, Lucas Newman-Johnson and Benjamin I.P Rubinstein. “Attacking Data Transforming Learners at Training Time”. In: <em>Proceedings of the 33rd AAAI Conference on Artificial Intelligence</em>. AAAI. 2019, pp. 3167-3174. [<a href="https://aaai.org/ojs/index.php/AAAI/article/view/4183">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alfeld2019attacking.bib', 'bibtex-alfeld2019attacking')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -316,6 +317,23 @@ $(document).ready(function () {
 
 <ul>
 <li>Joseph, Anthony D., Blaine Nelson, Benjamin I. P. Rubinstein and J. D. Tygar. <em>Adversarial Machine Learning</em>. in press for April 2019 publication. Cambridge University Press, 2019. [<a href="https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joseph2019adversarial.bib', 'bibtex-joseph2019adversarial')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-culnane2019stop">
+@misc{culnane2019stop,
+  title = {Stop the Open Data Bus, We Want to Get Off},
+  author = {Chris Culnane and Benjamin I. P. Rubinstein and Vanessa Teague},
+  eprint = {1908.05004},
+  year = {2019},
+  month = {Aug},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.CR},
+}
+</code></pre></div>
+
+<ul>
+<li>Culnane, Chris, Benjamin I. P. Rubinstein and Vanessa Teague. <em>Stop the Open Data Bus, We Want to Get Off</em>. Aug. 2019. arXiv: 1908.05004 [cs.CR]. [<a href="https://arxiv.org/pdf/1908.05004">PDF</a>; <a href="https://pursuit.unimelb.edu.au/articles/two-data-points-enough-to-spot-you-in-open-transport-records">pop article</a>; <a style="cursor: pointer;" onclick="DownloadToFile('culnane2019stop.bib', 'bibtex-culnane2019stop')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
